--- a/style/style.scss
+++ b/style/style.scss
@@ -92,7 +92,7 @@ header {
         justify-content: space-evenly;
 
         h1 {
-            font-size: f.$header-size;
+            font-size: f.$large;
             color: c.$header-color;
         }
 
