--- a/style/variables/_font.scss
+++ b/style/variables/_font.scss
@@ -2,6 +2,8 @@
 $font-family: 'Poppins', sans-serif;
 
 //font sizes
+$divider-size: .5rem;
 $nav-size: 1rem;
 $header-size: 2rem;
-$divider-size: .5rem;
+$large: 3rem;
+
