--- a/style/style.scss
+++ b/style/style.scss
@@ -75,8 +75,9 @@ header {
 
 //landing page
 #landing-page {
-    @include m.screen-size();
     @include m.flexBox();
+    height: 90vh;
+    width: 100%;
     justify-content: space-evenly;
     flex-wrap: wrap;
     background-color: #cc5577;
