--- a/style/style.css
+++ b/style/style.css
@@ -125,11 +125,51 @@ header nav a:hover {
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1066%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M655 524L-375 523' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M706 84L-239 83' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M64 99L-801 98' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1044 18L1415 17' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1310 136L437 135' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1032 400L1811 399' stroke-width='10' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1327 518L1694 517' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1139 351L1981 350' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1191 455L126 454' stroke-width='10' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M586 37L103 36' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1393 331L661 330' stroke-width='10' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M931 476L134 475' stroke-width='8' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M989 270L304 269' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M719 356L1325 355' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1066'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='100%25' y1='0%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1067'%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='0%25' y1='0%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1068'%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+  background-attachment: fixed;
+  background-size: cover;
 }
 #product-list .product-cont {
+  display: flex;
+  align-items: center;
   height: 80vh;
   width: 90%;
-  background-color: #cc5577;
+  justify-content: center;
+  flex-direction: column;
+}
+#product-list .product-cont h1 {
+  color: #a8896c;
+  font-size: 3rem;
+}
+#product-list .product-cont .prod-cont-parent {
+  width: 100%;
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+#product-list .product-cont .prod-cont-parent .prod-child {
+  width: 90%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+#product-list .product-cont .prod-cont-parent .prod-child .prod-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 88%;
+  width: 29.5%;
+  background-color: #f2e5db;
+  border-radius: 25px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+#product-list .product-cont .prod-cont-parent .prod-child .prod-content .prod-img {
+  width: 90%;
+  height: 55%;
+  background-color: #ffffff;
+  border-radius: 20px;
 }
 
 @media (max-width: 575px) {
