--- a/style/style.scss
+++ b/style/style.scss
@@ -174,6 +174,8 @@ header {
                 .prod-content {
                     @include m.flexBox();
                     justify-content: center;
+                    flex-direction: column;
+                    color: c.$header-color;
                     height: 88%;
                     width: 29.5%;
                     background-color: c.$divider-color;
@@ -185,7 +187,14 @@ header {
                         height: 55%;
                         background-color: c.$white-color;
                         border-radius: 20px;
+                        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
                     }
+
+                    h2 {
+                        margin: 20px;
+                        font-weight: 800;
+                    }
+
                 }
             }
         }
