--- a/style/style.scss
+++ b/style/style.scss
@@ -201,7 +201,26 @@ header {
     }
 }
 
+#contact {
+    @include m.screen-size();
+    @include m.flexBox();
 
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1066%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M655 524L-375 523' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M706 84L-239 83' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M64 99L-801 98' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1044 18L1415 17' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1310 136L437 135' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1032 400L1811 399' stroke-width='10' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1327 518L1694 517' stroke-width='8' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1139 351L1981 350' stroke-width='6' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M1191 455L126 454' stroke-width='10' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M586 37L103 36' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M1393 331L661 330' stroke-width='10' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M931 476L134 475' stroke-width='8' stroke='url(%23SvgjsLinearGradient1067)' stroke-linecap='round' class='Left'%3e%3c/path%3e%3cpath d='M989 270L304 269' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3cpath d='M719 356L1325 355' stroke-width='6' stroke='url(%23SvgjsLinearGradient1068)' stroke-linecap='round' class='Right'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1066'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='100%25' y1='0%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1067'%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='0%25' y1='0%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1068'%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 0)' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(219%2c 176%2c 123%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
+    background-attachment: fixed;
+    background-size: cover;
+
+    .profile {
+        width: 50%;
+        height: 100vh;
+        background-color: #cc5577;
+    }
+
+    .contact-form {
+        width: 50%;
+        height: 100vh;
+        background-color: aquamarine;
+    }
+}
 
 
 
