--- a/style/style.scss
+++ b/style/style.scss
@@ -212,13 +212,13 @@ header {
     .profile {
         width: 50%;
         height: 100vh;
-        background-color: #cc5577;
+        //background-color: #cc5577;
     }
 
     .contact-form {
         width: 50%;
         height: 100vh;
-        background-color: aquamarine;
+        //background-color: aquamarine;
     }
 }
 
