--- a/src/sys-user/_index.scss
+++ b/src/sys-user/_index.scss
@@ -1,2 +1,27 @@
-@forward 'home-page';
-@forward 'login-page';
+/*Import of System's User SASS/CSS*/
+//Home Page
+@forward 'home-page/userhome';
+@forward 'home-page/breakpoints';
+
+//Login Page
+@forward 'login-page/userlogin';
+@forward 'login-page/breakpoints';
+
+//Customization Page
+@forward 'customization-page/userCustomization';
+@forward 'customization-page/breakpoints';
+
+//Message Page
+@forward 'message-page/userMessage';
+@forward 'message-page/breakpoints';
+
+//My Profile Page
+@forward 'myprofile-page/userProfile';
+@forward 'myprofile-page/breakpoints';
+
+//Shop Page
+@forward 'shop-page/userShop';
+@forward 'shop-page/breakpoints';
+
+
+
