--- a/src/style/header/_header.scss
+++ b/src/style/header/_header.scss
@@ -1,3 +1,6 @@
+// this is the header style of all pages
+@use '../globals' as *;
+
 * {
     padding: 0;
     margin: 0;
@@ -55,4 +58,21 @@ header {
             }
         }
     }
+}
+
+//divider
+.divider {
+    @include flexBox();
+
+    height: 2vh;
+    width: 100%;
+    background-color: $divider-color;
+
+    p {
+        @include leftMargin();
+
+        font-size: $divider-size;
+        color: $header-color;
+    }
+
 }
