--- a/src/style/globals/variables/_colors.scss
+++ b/src/style/globals/variables/_colors.scss
@@ -4,3 +4,5 @@ $divider-color: #f2e5db; /*divider color*/
 $loginbg-color: #f5ece3; /*login container color*/
 $white-color: #ffffff; /*white color*/
 $mt-color: #dbb07b; /*mountain background color*/
+
+$loginbg-color-op: #f5ece39a;
