--- a/src/style/style.css
+++ b/src/style/style.css
@@ -197,7 +197,6 @@ header nav a:hover {
 }
 #contact .profile .prof-cont {
   overflow-y: scroll;
-  scrollbar-color: red green;
   width: 80%;
   height: 80vh;
   margin-top: 60px;
@@ -265,6 +264,93 @@ header nav a:hover {
 #contact .contact-form {
   width: 50%;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+#contact .contact-form .contact-cont {
+  overflow-y: scroll;
+  width: 80%;
+  height: 80vh;
+  margin-top: 60px;
+  background-color: rgba(245, 236, 227, 0.6039215686);
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+#contact .contact-form .contact-cont::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+#contact .contact-form .contact-cont::-webkit-scrollbar-track {
+  background: transparent;
+}
+#contact .contact-form .contact-cont::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+#contact .contact-form .contact-cont::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+#contact .contact-form .contact-cont::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
+}
+#contact .contact-form .contact-cont h1 {
+  margin-top: 40px;
+  font-size: 2rem;
+  color: #a8896c;
+  font-weight: 800;
+}
+#contact .contact-form .contact-cont p {
+  text-align: center;
+  margin: 0 70px;
+  color: #a8896c;
+  border-top: 1px solid #dbb07b;
+  padding-top: 20px;
+  margin-top: 20px;
+}
+#contact .contact-form .contact-cont form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#contact .contact-form .contact-cont .form-inputs {
+  width: 80%;
+}
+#contact .contact-form .contact-cont .form-inputs .input, #contact .contact-form .contact-cont .form-inputs .button {
+  display: flex;
+  flex-direction: column;
+}
+#contact .contact-form .contact-cont .form-inputs .input input[type=text], #contact .contact-form .contact-cont .form-inputs .input input[type=email], #contact .contact-form .contact-cont .form-inputs .input textarea, #contact .contact-form .contact-cont .form-inputs .button input[type=text], #contact .contact-form .contact-cont .form-inputs .button input[type=email], #contact .contact-form .contact-cont .form-inputs .button textarea {
+  padding: 15px 8px;
+  margin: 3px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  border-radius: 1px;
+}
+#contact .contact-form .contact-cont .form-inputs .input label, #contact .contact-form .contact-cont .form-inputs .button label {
+  color: #a8896c;
+}
+#contact .contact-form .contact-cont .form-inputs .input .submit, #contact .contact-form .contact-cont .form-inputs .button .submit {
+  background-color: #a8896c;
+  color: white;
+  padding: 15px 0;
+  margin: 10px 0 50px 0;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: 600;
+}
+#contact .contact-form .contact-cont .form-inputs .input .submit:hover, #contact .contact-form .contact-cont .form-inputs .button .submit:hover {
+  opacity: 70%;
 }
 
 @media (max-width: 575px) {
