--- a/src/style/style.css
+++ b/src/style/style.css
@@ -148,6 +148,24 @@ header nav a:hover {
   align-items: center;
   justify-content: space-evenly;
 }
+#product-list .product-cont .prod-cont-parent button {
+  position: absolute;
+  right: 150px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+#product-list .product-cont .prod-cont-parent button img {
+  width: 55px;
+  height: 55px;
+}
+#product-list .product-cont .prod-cont-parent button:hover {
+  opacity: 80%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
 #product-list .product-cont .prod-cont-parent .prod-child {
   width: 90%;
   height: 90%;
@@ -332,7 +350,7 @@ header nav a:hover {
   padding: 15px 8px;
   margin: 3px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid #dbb07b;
   box-sizing: border-box;
   border-radius: 1px;
 }
