--- a/src/sys-user/login-page/userlogin.css
+++ b/src/sys-user/login-page/userlogin.css
@@ -120,4 +120,16 @@ main section .container button {
 }
 main section .container button:hover {
   opacity: 70%;
+}
+main section p {
+  font-size: 0.8rem;
+  border-top: 1px solid #a8896c;
+  padding: 10px 30px 0 30px;
+}
+main section p a {
+  text-decoration: none;
+  color: #a8896c;
+}
+main section p a:hover {
+  opacity: 80%;
 }/*# sourceMappingURL=userlogin.css.map */
