--- a/src/sys-user/login-page/userlogin.scss
+++ b/src/sys-user/login-page/userlogin.scss
@@ -54,5 +54,20 @@ main {
                 }
             }
         }
+
+        p {
+            font-size: .8rem;
+            border-top: 1px solid $header-color;
+            padding: 10px 30px 0 30px;
+            
+            a {
+                text-decoration: none;
+                color: $header-color;
+
+                &:hover {
+                    opacity: 80%;
+                }
+            }
+        }
     }
 }
