--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,6 +22,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 9;
 }
 header .app-name {
   width: 50%;
@@ -156,6 +157,7 @@ header nav a:hover {
   border-radius: 50%;
   border: none;
   cursor: pointer;
+  z-index: 1;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 #product-list .product-cont .prod-cont-parent button img {
