--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -94,6 +94,7 @@
                 border-radius: 50%;
                 border: none;
                 cursor: pointer;
+                z-index: 1;
                 box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
                 img {
