--- a/src/sys-user/login-page/userlogin.scss
+++ b/src/sys-user/login-page/userlogin.scss
@@ -32,7 +32,7 @@ main {
             justify-content: center;
             flex-direction: column;
 
-            input[type=text], input[type=password] {
+            input[type=email], input[type=password] {
                 width: 130%;
                 padding: 10px 8px;
                 margin: 3px 0;
