--- a/src/sys-user/signup-page/signup-page.css
+++ b/src/sys-user/signup-page/signup-page.css
@@ -113,10 +113,25 @@ main section::-webkit-scrollbar-track-piece:start {
   margin-top: 10px;
 }
 main section h1 {
-  margin-top: 200px;
+  margin-top: 290px;
 }
 main section p {
   margin-bottom: 50px;
+}
+main section .profile-photo {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 15px;
+}
+main section .profile-photo input[type=file] {
+  width: 180px;
+  padding: 10px 8px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #a8896c;
+  color: #ffffff;
 }
 main section .container {
   padding: 16px 0;
