--- a/src/sys-user/home-page/userhome.css
+++ b/src/sys-user/home-page/userhome.css
@@ -67,4 +67,99 @@ header nav a:hover {
   margin: 0 0 0 70px;
   font-size: 0.5rem;
   color: #a8896c;
+}
+
+main {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .container {
+  width: 1120px;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+}
+main .container .product-cont {
+  width: 740px;
+  height: 90vh;
+}
+main .container .product-cont .category button {
+  font-family: "Poppins", sans-serif;
+  border: 2px solid #a8896c;
+  background-color: #ffffff;
+  width: 100px;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+  color: #a8896c;
+}
+main .container .product-cont .category button:hover {
+  color: #ffffff;
+  background-color: #a8896c;
+}
+main .container .product-cont .category .active {
+  color: #ffffff;
+  background-color: #a8896c;
+}
+main .container .product-cont .product {
+  overflow-y: scroll;
+  width: 710px;
+  height: 82vh;
+  margin-top: 12px;
+  display: flex;
+  flex-wrap: wrap;
+}
+main .container .product-cont .product .prod-display {
+  width: 165px;
+  height: 180px;
+  margin-left: 6px;
+  margin-top: 10px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+  color: #a8896c;
+  background-color: #f2e5db;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+main .container .product-cont .product .prod-display .prod-img {
+  width: 150px;
+  height: 100px;
+  background-color: #ffffff;
+}
+main .container .shopinfo-cont {
+  width: 380px;
+  height: 90vh;
+}
+main .container .shopinfo-cont .search-bar input[type=text] {
+  width: 75%;
+  padding: 5px 8px;
+  margin: 10px 0;
+  display: inline-block;
+  border: 1px solid #a8896c;
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+main .container .shopinfo-cont .search-bar button {
+  width: 22%;
+  padding: 4px 0;
+  border-radius: 5px;
+  border: 1px solid #a8896c;
+  color: #ffffff;
+  background-color: #a8896c;
+}
+main .container .shopinfo-cont .search-bar button:hover {
+  opacity: 70%;
+}
+main .container .shopinfo-cont .shopinfo {
+  width: 380px;
+  height: 83vh;
+  background-color: #f2e5db;
 }/*# sourceMappingURL=userhome.css.map */
