--- a/src/sys-user/home-page/userhome.css
+++ b/src/sys-user/home-page/userhome.css
@@ -161,5 +161,16 @@ main .container .shopinfo-cont .search-bar button:hover {
 main .container .shopinfo-cont .shopinfo {
   width: 380px;
   height: 83vh;
+  color: #a8896c;
   background-color: #f2e5db;
+}
+main .container .shopinfo-cont .shopinfo h1 {
+  text-align: center;
+  padding-top: 10px;
+}
+main .container .shopinfo-cont .shopinfo h3 {
+  margin: 10px 0 0 10px;
+}
+main .container .shopinfo-cont .shopinfo p {
+  margin-left: 30px;
 }/*# sourceMappingURL=userhome.css.map */
